{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 46,
  "lineage": "54167b54-74e2-352f-bdea-feb8b9ff1aab",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-23T07:10:09.759-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/my-test-project-2020-264310/global/firewalls/dtc-dev-http-ssh",
            "name": "dtc-dev-http-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/networks/dtc-dev-network",
            "priority": 1000,
            "project": "my-test-project-2020-264310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/firewalls/dtc-dev-http-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-01-23T07:10:09.746-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/my-test-project-2020-264310/global/firewalls/dtc-dev-internal-fw",
            "name": "dtc-dev-internal-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/networks/dtc-dev-network",
            "priority": 1000,
            "project": "my-test-project-2020-264310",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/firewalls/dtc-dev-internal-fw",
            "source_ranges": [
              "10.0.10.0/24",
              "10.0.20.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_network.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/gce-uefi-images/global/images/ubuntu-1804-bionic-v20191113",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/zones/asia-east1-a/disks/dtc-dev-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-test-project-2020-264310/zones/asia-east1-a/instances/dtc-dev-host",
            "instance_id": "4775628457029929352",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "R8PojfKD5mo=",
            "name": "dtc-dev-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "130.211.254.105",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/networks/dtc-dev-network",
                "network_ip": "10.0.10.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/regions/asia-east1/subnetworks/dtc-dev-east-subnet",
                "subnetwork_project": "my-test-project-2020-264310"
              }
            ],
            "project": "my-test-project-2020-264310",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/zones/asia-east1-a/instances/dtc-dev-host",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "asia-east1-a"
          },
          "depends_on": [
            "data.google_compute_image.debian",
            "google_compute_network.vpc-1",
            "google_compute_subnetwork.subnet-ae"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "webserver",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/gce-uefi-images/global/images/ubuntu-1804-bionic-v20191113",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/zones/asia-south1-a/disks/dtc-dev-nginx"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/my-test-project-2020-264310/zones/asia-south1-a/instances/dtc-dev-nginx",
            "instance_id": "4252661599707597192",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "suzKGrLnnNs=",
            "metadata_startup_script": "#!/bin/bash\r\nset -e\r\necho \"**** Installing Nginx ****\"\r\napt update\r\napt install -y nginx\r\nufw allow 'Nginx HTTP'\r\nsystemctl enable nginx\r\nsystemctl restart nginx\r\necho \"  Installation Complete  \"\r\necho \" Welcom to GCP VM Instance Deployed using Terraform \" \u003e /var/www/html/index.html",
            "name": "dtc-dev-nginx",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.170.27",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/networks/dtc-dev-network",
                "network_ip": "10.0.20.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/regions/asia-south1/subnetworks/dtc-dev-south-subnet",
                "subnetwork_project": "my-test-project-2020-264310"
              }
            ],
            "project": "my-test-project-2020-264310",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/zones/asia-south1-a/instances/dtc-dev-nginx",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http"
            ],
            "tags_fingerprint": "MulzF_u7WEg=",
            "zone": "asia-south1-a"
          },
          "depends_on": [
            "data.google_compute_image.debian",
            "data.template_file.nginx",
            "google_compute_network.vpc-1",
            "google_compute_subnetwork.subnet-as"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/my-test-project-2020-264310/global/networks/dtc-dev-network",
            "name": "dtc-dev-network",
            "project": "my-test-project-2020-264310",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/networks/dtc-dev-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-ae",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-01-23T07:10:09.285-08:00",
            "gateway_address": "10.0.10.1",
            "id": "projects/my-test-project-2020-264310/regions/asia-east1/subnetworks/dtc-dev-east-subnet",
            "ip_cidr_range": "10.0.10.0/24",
            "name": "dtc-dev-east-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/networks/dtc-dev-network",
            "private_ip_google_access": false,
            "project": "my-test-project-2020-264310",
            "region": "asia-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/regions/asia-east1/subnetworks/dtc-dev-east-subnet"
          },
          "depends_on": [
            "google_compute_network.vpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet-as",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-01-23T07:10:09.843-08:00",
            "gateway_address": "10.0.20.1",
            "id": "projects/my-test-project-2020-264310/regions/asia-south1/subnetworks/dtc-dev-south-subnet",
            "ip_cidr_range": "10.0.20.0/24",
            "name": "dtc-dev-south-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/global/networks/dtc-dev-network",
            "private_ip_google_access": false,
            "project": "my-test-project-2020-264310",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/my-test-project-2020-264310/regions/asia-south1/subnetworks/dtc-dev-south-subnet"
          },
          "depends_on": [
            "google_compute_network.vpc-1"
          ]
        }
      ]
    }
  ]
}